# legal-law-diary

./: .env.example  .gitignore  index.html  netlify.toml  package-lock.json  package.json
.github/: copilot-instructions.md  copilot-toolbox-mcp-skills-awareness.md
.github/workflows/: netlify-deploy.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_diary_indexes.sql  003_phase3_ext.sql  004_reminder_fields.sql  005_division_field.sql  006_cnic.sql
src-tauri/src/: lib.rs  main.rs
src/components/: Calendar.tsx  CaseParties.tsx  ClericalNotices.tsx  ClericalOrderCopies.tsx  ClericalSummons.tsx  Documents.tsx  FAQSection.tsx  NoteEditor.tsx  ProceedingList.tsx  ReferenceForm.tsx  ReminderBell.tsx  SearchDialog.tsx  SubscriptionGuard.tsx
src/components/admin/: AdminGuard.tsx  (+1 more)
src/data/: court-holidays.ts  faq.ts  guides.ts
src/hooks/: useAuth.ts  useReminders.ts
src/lib/: backup.ts  court-data.ts  db-local.ts  db-supabase.ts  db-tauri.ts  db.ts  pdf-export.ts  reminder.ts  search.ts  supabase.ts  utils.ts
src/pages/: CaseDetail.tsx  Cases.tsx  Clerical.tsx  ClientDetail.tsx  Clients.tsx  Courts.tsx  Dashboard.tsx  Diary.tsx  EditEntry.tsx  FAQ.tsx  GuideDetail.tsx  Guides.tsx  Landing.tsx  LawsLibrary.tsx  Legal.tsx  LegalDrafter.tsx  LimitationCalc.tsx  Login.tsx  NewCase.tsx  NewClient.tsx  NewEntry.tsx  Notes.tsx  PaymentStatus.tsx  Pricing.tsx  Register.tsx  Settings.tsx  Subscribe.tsx  Tasks.tsx  TimeTracking.tsx  Tools.tsx
src/types/: index.ts
(+21 files in other folders)
